--- a/date.html
+++ b/date.html
@@ -61,10 +61,10 @@
         <h2>What best describes how you met?</h2>
         <br/>
         <form method="post" action="choice.php">
-          <input type="radio" name="met" value="bar" /> Bar <br/>
-          <input type="radio" name="met" value="gym" /> Gym <br/>
-          <input type="radio" name="met" value="res" /> Restaurant <br/>
-          <input type="radio" name="met" value="school" /> School <br/>
+          <input type="radio" name="met" value="bar" /> At a bar <br/>
+          <input type="radio" name="met" value="gym" /> At the gym <br/>
+          <input type="radio" name="met" value="work" /> At work <br/>
+          <input type="radio" name="met" value="con" /> At a concert <br/>
           <input id="submit" name="submit" type="submit" value="Next Question &raquo;" class="btn primary large" background-color="white"/>
         </form>
       </div>
