Fixed headings, titles, wordings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Date Night</title>
+    <title>WingWoman</title>
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html">Date Night</a>
+          <a class="brand" href="index.html">WingWoman</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="index.html">Home</a></li>
@@ -60,8 +60,9 @@
         <h1>Discover the Perfect Date!</h1>
         <img src="Happy_Couple_Image.jpg" height="160" width="160" align="right">        
         <hr color="#94D1CA">
-        <p>Simply answer these questions about you and your special someone and you can have your next date planned at the click of a button! Make the time you spend together even more special and perfectly personalized for each of your needs.</p>
+        <p>Wingwoman is an application that works very much like 20 questions. Simply answer a short list of questions about you and your special someone and you can have your next date planned at the click of a button! Make the time you spend together even more special and perfectly personalized for each of your needs. Plus, all of our recommendations are local deals aggregated from sites like Groupon & Livingsocial so you get more romance for each dollar.</p>
         <br>
+        <p>Winner of "Best Use of Yipit API" award at the 2012 Hack n' Jill Hackathon</p>
         <p><a class="btn btn-primary btn-large" href="date.html">Get Started &raquo;</a></p>
       </div>
 
