--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul class="nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="date.html">Date</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
